--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-speech-kit",
-  "version": "3.0.1",
+  "name": "@mattvick/react-speech-kit",
+  "version": "3.0.2",
   "description": "React hooks for in-browser Speech Recognition and Speech Synthesis.",
   "main": "dist/index.js",
   "scripts": {
@@ -13,7 +13,15 @@
     "publish-demo": "npm run build-demo && npm run deploy-demo"
   },
   "author": "Michael Parton",
+  "contributors": [
+    "Matthew Vickery <vickery.matthew@gmail.com> (http://matthewvickery.org/)"
+  ],
   "license": "MIT",
+  "publishConfig": {
+    "access": "restricted",
+    "registry": "https://npm.pkg.github.com/"
+  },
+  "repository": "https://github.com/mattvick/react-speech-kit.git",
   "peerDependencies": {
     "prop-types": "^15.7.2",
     "react": "^16.8.0"
